file upload mechanism

--- a/authapp/.env
+++ b/authapp/.env
@@ -1,5 +1,4 @@
 PORT=8080
 
 
-
-MONGO_URL=mongodb+srv://logan:pN9wfZaRQrLjyof6@cluster0.8xodeia.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://logan:pN9wfZaRQrLjyof6@cluster0.8xodeia.mongodb.net/db
